# Pico-NTP-Module

./: CMakeLists.txt  LICENSE  Pico-NTP-Example.c  Pico-NTP-Example.uf2  Pico-NTP-Module.c  Pico-NTP-Module.h  README.md  ntp-lang-english.h  ntp-lang-french.h
